// ==========================================
// MÓDULO: GESTIÓN DE USUARIOS Y CLASES
// ==========================================

Table USUARIO {
  idUsuario int [pk]
  Nombre varchar
  Telefono varchar 
  Correo varchar [unique]
  Direccion varchar
  passwordHash varchar [note: "bcrypt hashed password"]
  activo boolean [default: true]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp [default: `now()`]
}

// ------ HERENCIA DE USUARIOS ------

Table CLIENTE {
  idcliente int [pk]
  idUsuario int
}

Table EMPLEADO {
  idempleado int [pk]
  idUsuario int
  salario float
  fecha_contrato date
}

Table ADMINISTRADOR {
  idadministrador int [pk]
  idUsuario int
  Cargo varchar
}

// ------ HERENCIA DE EMPLEADOS ------

Table RECEPCIONISTA {
  idrecepcionista int [pk]
  idempleado int
}

Table INSTRUCTOR {
  idinstructor int [pk]
  idempleado int
  Especialidad varchar
}

Table ADM_LIMPIEZA {
  idlimpieza int [pk]
  idempleado int
}

// ------ TABLAS DE CLASES Y ASISTENCIA ------

Table CLASES {
  idclases int [pk]
  idinstructor int
  Nombre varchar
  Horario varchar
}

Table ASISTE {
  idcliente int [pk]
  idclases int [pk]
  Fecha date
}

// ==========================================
// TABLA DE SESIONES (JWT)
// ==========================================

Table SESION {
  idSesion int [pk]
  idUsuario int
  refreshToken varchar
  expiresAt timestamp
  createdAt timestamp [default: `now()`]
}

// ==========================================
// RELACIONES (FOREIGN KEYS)
// ==========================================

// Relaciones de herencia de usuarios (1 a 1)
Ref: CLIENTE.idUsuario - USUARIO.idUsuario
Ref: EMPLEADO.idUsuario - USUARIO.idUsuario
Ref: ADMINISTRADOR.idUsuario - USUARIO.idUsuario

// Relaciones de herencia de empleados (1 a 1)
Ref: RECEPCIONISTA.idempleado - EMPLEADO.idempleado
Ref: INSTRUCTOR.idempleado - EMPLEADO.idempleado
Ref: ADM_LIMPIEZA.idempleado - EMPLEADO.idempleado

// Relación operativa de clases (1 a N)
Ref: CLASES.idinstructor > INSTRUCTOR.idinstructor

// Relaciones de asistencia (Muchos a Muchos desglosada)
Ref: ASISTE.idcliente > CLIENTE.idcliente
Ref: ASISTE.idclases > CLASES.idclases

// Relación de sesiones (1 a N)
Ref: SESION.idUsuario > USUARIO.idUsuario